k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: sandbox-poc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend-gateway
spec:
  hosts:
    - "*"
  gateways:
    - sandbox-poc-gateway
  http:
    - name: frontend-route
      route:
        - destination:
            host: frontend
            port:
              number: 80
